; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/s390/crypto/extr_des_s390.c_des3_192_decrypt.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/s390/crypto/extr_des_s390.c_des3_192_decrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.crypto_tfm = type { i32 }
%struct.crypt_s390_des3_192_ctx = type { i32 }

@KM_TDEA_192_DECRYPT = common dso_local global i32 0, align 4
@DES3_192_BLOCK_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.crypto_tfm*, i32*, i32*)* @des3_192_decrypt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @des3_192_decrypt(%struct.crypto_tfm* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.crypto_tfm*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.crypt_s390_des3_192_ctx*, align 8
  store %struct.crypto_tfm* %0, %struct.crypto_tfm** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load %struct.crypto_tfm*, %struct.crypto_tfm** %4, align 8
  %9 = call %struct.crypt_s390_des3_192_ctx* @crypto_tfm_ctx(%struct.crypto_tfm* %8)
  store %struct.crypt_s390_des3_192_ctx* %9, %struct.crypt_s390_des3_192_ctx** %7, align 8
  %10 = load i32, i32* @KM_TDEA_192_DECRYPT, align 4
  %11 = load %struct.crypt_s390_des3_192_ctx*, %struct.crypt_s390_des3_192_ctx** %7, align 8
  %12 = getelementptr inbounds %struct.crypt_s390_des3_192_ctx, %struct.crypt_s390_des3_192_ctx* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32*, i32** %5, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = bitcast i32* %15 to i8*
  %17 = load i32, i32* @DES3_192_BLOCK_SIZE, align 4
  %18 = call i32 @crypt_s390_km(i32 %10, i32 %13, i32* %14, i8* %16, i32 %17)
  ret void
}

declare dso_local %struct.crypt_s390_des3_192_ctx* @crypto_tfm_ctx(%struct.crypto_tfm*) #1

declare dso_local i32 @crypt_s390_km(i32, i32, i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
